--- a/GOEN/CeremonyHome.storyboard
+++ b/GOEN/CeremonyHome.storyboard
@@ -1136,7 +1136,8 @@
                                                             <rect key="frame" x="268" y="0.0" width="77" height="30"/>
                                                             <state key="normal" title="メッセージ"/>
                                                             <connections>
-                                                                <segue destination="lgk-4n-Stj" kind="presentation" id="Di7-5h-Mee"/>
+                                                                <action selector="sendMessage:" destination="Uje-Vn-aAp" eventType="touchUpInside" id="X4h-vD-Tt9"/>
+                                                                <segue destination="lgk-4n-Stj" kind="presentation" identifier="sendMessage" id="SKB-RT-vfX"/>
                                                             </connections>
                                                         </button>
                                                     </subviews>
@@ -1225,65 +1226,20 @@
             </objects>
             <point key="canvasLocation" x="-1188" y="908.54572713643188"/>
         </scene>
-        <!--View Controller-->
+        <!--Ceremony Message List View Controller-->
         <scene sceneID="Mqz-xU-H9M">
             <objects>
-                <viewController id="lgk-4n-Stj" sceneMemberID="viewController">
+                <viewController id="lgk-4n-Stj" customClass="CeremonyMessageListViewController" customModule="GOEN" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ENK-Ru-rQ3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ahe-rf-ZwL">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <items>
-                                    <navigationItem title="メッセージ" id="Qx8-0C-jW9"/>
-                                </items>
-                            </navigationBar>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" contentInsetAdjustmentBehavior="scrollableAxes" translatesAutoresizingMaskIntoConstraints="NO" id="p1n-ps-fYk">
-                                <rect key="frame" x="0.0" y="64" width="375" height="536"/>
-                                <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gzJ-ve-eEj">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="478"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="478" id="6X7-dD-i7t"/>
-                                        </constraints>
-                                    </tableView>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uja-xg-Orq">
-                                        <rect key="frame" x="0.0" y="486" width="375" height="50"/>
-                                        <subviews>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DCX-Yl-9rH">
-                                                <rect key="frame" x="8" y="5" width="305" height="40"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                            </textView>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yg5-ug-Dkb">
-                                                <rect key="frame" x="321" y="10" width="46" height="30"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                <state key="normal" title="送信"/>
-                                            </button>
-                                        </subviews>
-                                        <color key="backgroundColor" red="0.92403391451415617" green="0.92403391451415617" blue="0.92403391451415617" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="Uja-xg-Orq" secondAttribute="width" id="KJT-T3-Y6l"/>
-                                    <constraint firstAttribute="height" secondItem="Uja-xg-Orq" secondAttribute="height" id="ars-jr-BcU"/>
-                                </constraints>
-                            </scrollView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="vMQ-Gg-jPO"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FaM-FR-mR5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-404" y="921.13943028485767"/>
+            <point key="canvasLocation" x="-393" y="909"/>
         </scene>
         <!--My Bridal Invi List View Controller-->
         <scene sceneID="6kh-b9-TEH">
