--- a/GOEN/CeremonyHome.storyboard
+++ b/GOEN/CeremonyHome.storyboard
@@ -25,7 +25,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ceremoyListCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="208" id="TXS-Kw-kNs" customClass="CeremonyListTableViewCell" customModule="GOEN" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ceremoyListCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ceremoyListCell" rowHeight="208" id="TXS-Kw-kNs" customClass="CeremonyListTableViewCell" customModule="GOEN" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="208"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TXS-Kw-kNs" id="vN6-5Q-K0D">
@@ -176,7 +176,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="bk0-Ws-Qbq"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="挙式一覧" id="uGL-Xf-n39"/>
+                    <tabBarItem key="tabBarItem" title="みんなの挙式" id="uGL-Xf-n39"/>
                     <navigationItem key="navigationItem" title="Title" id="sLR-ys-LBv"/>
                     <connections>
                         <outlet property="ceremonyTable" destination="YYD-K6-3Yw" id="XeH-fR-pSK"/>
@@ -1136,8 +1136,7 @@
                                                             <rect key="frame" x="268" y="0.0" width="77" height="30"/>
                                                             <state key="normal" title="メッセージ"/>
                                                             <connections>
-                                                                <action selector="sendMessage:" destination="Uje-Vn-aAp" eventType="touchUpInside" id="X4h-vD-Tt9"/>
-                                                                <segue destination="lgk-4n-Stj" kind="presentation" identifier="sendMessage" id="SKB-RT-vfX"/>
+                                                                <action selector="sendMessage:" destination="Uje-Vn-aAp" eventType="touchUpInside" id="vy6-Tq-0by"/>
                                                             </connections>
                                                         </button>
                                                     </subviews>
@@ -1229,9 +1228,9 @@
         <!--Ceremony Message List View Controller-->
         <scene sceneID="Mqz-xU-H9M">
             <objects>
-                <viewController id="lgk-4n-Stj" customClass="CeremonyMessageListViewController" customModule="GOEN" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="createMes" storyboardIdentifier="createMes" id="lgk-4n-Stj" customClass="CeremonyMessageListViewController" customModule="GOEN" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ENK-Ru-rQ3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="vMQ-Gg-jPO"/>
